# rose

projects/RosePolly/: README.md  build  cloogOUT.cloog  log.txt  rose_2mm.c  rose_adi.c  rose_correlation.c  rose_gemm.c
projects/RosePolly/examples/adi/: .outfilename  adi.c
projects/RosePolly/examples/fdtd-2d/: fdtd-2d.c
projects/RosePolly/examples/jacobi-2d-imper/: jacobi-2d-imper.c  util.h
projects/RosePolly/examples/matmul/: matmul.pocc.c
projects/RosePolly/examples/polybench-c-3.2/datamining/correlation/: correlation.c
projects/RosePolly/examples/polybench-c-3.2/datamining/covariance/: covariance.c
projects/RosePolly/examples/polybench-c-3.2/medley/floyd-warshall/: floyd-warshall.c
projects/RosePolly/examples/polybench-c-3.2/medley/reg_detect/: reg_detect.c
projects/RosePolly/examples/polybench-c-3.2/stencils/adi/: adi.c
projects/RosePolly/examples/polybench-c-3.2/stencils/fdtd-2d/: fdtd-2d.c
projects/RosePolly/examples/polybench-c-3.2/stencils/fdtd-apml/: fdtd-apml.c
projects/RosePolly/examples/polybench-c-3.2/stencils/seidel-2d/: seidel-2d.c
projects/RosePolly/include/rosepoly/: Nodes.h  RosePollyCustom.h  RosePollyMath.h  RosePollyModel.h  access_pattern.h  traversals.h
projects/RosePolly/independent_build/: Makefile.am  configure.ac  paths.mk
projects/RosePolly/independent_build/src/: Makefile.am
projects/RosePolly/src/: Kernel.cpp  Nodes.cpp  RoseCloog.cpp  RosePollyCustom.cpp  RosePollyInterface.cpp  RosePollyMath.cpp  RosePollyModel.cpp  a.out  access_pattern.cpp  isl_interface.cpp  main.cpp  rose_matmul.c  traversals.cpp
(+22 files in other folders)
